Remove the default qr from qrdiv

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <script>
       let qrcode = new QRCode(document.querySelector(".qrCode"));
-      qrcode.makeCode("Why did you scan me?");
+      // qrcode.makeCode("Why did you scan me?");
 
       const linkHandler = (eve) => {
         if (event.key === "Enter" /*event.keyCode === 13*/) {
